--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <title>Randomator 3000</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cellipse cx='32' cy='54' rx='20' ry='6' fill='%23333'/%3E%3Cpath d='M32 8 C40 10, 52 36, 32 44 C12 36, 24 10, 32 8 Z' fill='%234b3f72' stroke='%23181811' stroke-width='2'/%3E%3Cellipse cx='32' cy='38' rx='12' ry='4' fill='%23f8f406' stroke='%23181811' stroke-width='1'/%3E%3Ccircle cx='38' cy='22' r='2' fill='%23fff'/%3E%3Ccircle cx='28' cy='18' r='1.5' fill='%23fff'/%3E%3Ccircle cx='35' cy='30' r='1' fill='%23fff'/%3E%3C/svg%3E">
+    <link rel="apple-touch-icon" sizes="180x180" href="sombrero.png.png">
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style>
