--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       onload="this.rel='stylesheet'"
       href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Spline+Sans%3Awght%40400%3B500%3B700"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 
-    <title>Randomator 3000</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cellipse cx='32' cy='54' rx='20' ry='6' fill='%23333'/%3E%3Cpath d='M32 8 C40 10, 52 36, 32 44 C12 36, 24 10, 32 8 Z' fill='%234b3f72' stroke='%23181811' stroke-width='2'/%3E%3Cellipse cx='32' cy='38' rx='12' ry='4' fill='%23f8f406' stroke='%23181811' stroke-width='1'/%3E%3Ccircle cx='38' cy='22' r='2' fill='%23fff'/%3E%3Ccircle cx='28' cy='18' r='1.5' fill='%23fff'/%3E%3Ccircle cx='35' cy='30' r='1' fill='%23fff'/%3E%3C/svg%3E">
+    <title>Randomator 3000 - ¡La Nimbus de las decisiones!</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='10' y='30' width='44' height='4' rx='2' fill='%234b3f72' stroke='%23321' stroke-width='2'/%3E%3Cellipse cx='54' cy='32' rx='6' ry='3' fill='%23f8f406' stroke='%23321' stroke-width='2'/%3E%3Crect x='8' y='32' width='8' height='2' fill='%23b71c1c'/%3E%3C/svg%3E">
     <link rel="apple-touch-icon" sizes="180x180" href="sombrero.png.png">
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -48,6 +49,12 @@
         100% {transform: scale(1); opacity: 1;}
       }
 
+      @keyframes magic-glow {
+        0% { box-shadow: 0 0 0 0 #ffd70044; }
+        50% { box-shadow: 0 0 32px 12px #ffd700cc; }
+        100% { box-shadow: 0 0 0 0 #ffd70044; }
+      }
+
       .animate-bounce-custom {
         animation: bounce 1s ease 3;
       }
@@ -66,6 +73,83 @@
 
       .animate-zoom-custom {
         animation: zoom 0.5s ease-out 1;
+      }
+
+      .magic-winner {
+        background: linear-gradient(135deg, #2d133b 0%, #b71c1c 100%);
+        border: 3px solid #ffd700;
+        border-radius: 18px;
+        padding: 32px 40px;
+        box-shadow: 0 2px 24px 0 #000a;
+        animation: magic-glow 2.5s infinite;
+        transition: background 0.5s;
+        position: relative;
+      }
+      .magic-winner-text {
+        color: #ffd700 !important;
+        font-family: 'Cinzel', serif !important;
+        font-size: 2.5rem;
+        letter-spacing: 2px;
+        text-shadow: 0 0 12px #fff8, 0 0 32px #ffd70088;
+        animation: fadeIn 1s;
+      }
+      @keyframes fadeIn {
+        from { opacity: 0; transform: scale(0.8); }
+        to { opacity: 1; transform: scale(1); }
+      }
+
+      body {
+        background: linear-gradient(135deg, #1a1a2a 0%, #3e2723 100%);
+        font-family: 'Cinzel', serif;
+        color: #f8f406;
+        min-height: 100vh;
+        position: relative;
+        overflow-x: hidden;
+      }
+      .magic-bg {
+        pointer-events: none;
+        position: fixed;
+        top: 0; left: 0; width: 100vw; height: 100vh;
+        z-index: 0;
+      }
+      .main-content {
+        position: relative;
+        z-index: 1;
+      }
+      .star {
+        position: absolute;
+        border-radius: 50%;
+        opacity: 0.85;
+        animation: twinkle 2.5s infinite ease-in-out;
+        box-shadow: 0 0 12px 4px #fff8, 0 0 24px 8px #ffd70044;
+      }
+      @keyframes twinkle {
+        0%, 100% { opacity: 0.7; }
+        50% { opacity: 0.2; }
+      }
+      .hp-subtitle {
+        text-align: center;
+        font-size: 1.1rem;
+        color: #ffd700;
+        margin-bottom: 1.5rem;
+        letter-spacing: 1px;
+        font-family: 'Cinzel', serif;
+      }
+      .hp-btn {
+        border: 2px solid #ffd700 !important;
+        background: #b71c1c !important;
+        color: #ffd700 !important;
+        font-family: 'Cinzel', serif !important;
+        box-shadow: 0 2px 8px 0 rgba(0,0,0,0.12);
+        transition: background 0.2s, color 0.2s;
+      }
+      .hp-btn:hover {
+        background: #ffd700 !important;
+        color: #b71c1c !important;
+      }
+      .star-bg {
+        background: repeating-linear-gradient(135deg, #1a1a1a 0 10px, #3e2723 10px 20px), url('data:image/svg+xml;utf8,<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg"><circle cx="10" cy="10" r="2" fill="%23ffd700"/><circle cx="80" cy="40" r="1.5" fill="%23ffd700"/><circle cx="60" cy="80" r="1" fill="%23ffd700"/></svg>');
+        background-size: cover;
       }
 
       /* --- RESPONSIVE MOBILE STYLES --- */
@@ -119,23 +203,105 @@
           max-width: 100% !important;
         }
       }
+
+      input, #newOption {
+        font-family: 'Cinzel', serif !important;
+        color: #ffd700 !important;
+        background: #222 !important;
+        border: 2px solid #b71c1c !important;
+      }
+      #optionsList p {
+        font-family: 'Cinzel', serif !important;
+        color: #ffd700 !important;
+        font-size: 1.2rem;
+        letter-spacing: 1px;
+        padding: 12px 20px;
+        background: rgba(34,34,34,0.85);
+        border-radius: 12px;
+        margin-bottom: 12px;
+        box-shadow: 0 2px 8px 0 rgba(0,0,0,0.10);
+        border: 1.5px solid #ffd700;
+        text-align: center;
+      }
+
+      /* Vista de resultados inspirada en el ejemplo */
+      .hp-result-bg {
+        background: linear-gradient(0deg, rgba(0,0,0,0.7) 0%, rgba(34,19,59,0.8) 100%), url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80');
+        background-size: cover;
+        background-position: center;
+        border-radius: 18px;
+        min-height: 220px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding-top: 120px;
+        margin-bottom: 24px;
+      }
+      .hp-winner-title {
+        color: #ffd700;
+        font-family: 'Cinzel', serif;
+        font-size: 2.2rem;
+        font-weight: bold;
+        text-align: center;
+        letter-spacing: 2px;
+        text-shadow: 0 2px 12px #000a, 0 0 32px #ffd70088;
+        margin-bottom: 0.5rem;
+      }
+      .hp-winner-desc {
+        color: #fff;
+        font-family: 'Cinzel', serif;
+        font-size: 1.1rem;
+        text-align: center;
+        margin-bottom: 0.5rem;
+      }
+      .hp-back-btn {
+        background: #b71c1c !important;
+        color: #ffd700 !important;
+        border-radius: 10px !important;
+        font-family: 'Cinzel', serif !important;
+        font-weight: bold;
+        font-size: 1.1rem;
+        padding: 0.75rem 2rem;
+        margin-top: 1.5rem;
+        box-shadow: 0 2px 8px 0 #000a;
+        border: 2px solid #ffd700 !important;
+        transition: background 0.2s, color 0.2s;
+      }
+      .hp-back-btn:hover {
+        background: #ffd700 !important;
+        color: #b71c1c !important;
+      }
     </style>
+    <meta charset="UTF-8">
   </head>
   <body>
+    <div class="magic-bg">
+      <div class="star" style="top:10%;left:15%;width:8px;height:8px;background:#fffbe6;animation-delay:0s;"></div>
+      <div class="star" style="top:30%;left:60%;width:7px;height:7px;background:#ffd700;animation-delay:0.5s;"></div>
+      <div class="star" style="top:70%;left:80%;width:10px;height:10px;background:#b3e5fc;animation-delay:1.2s;"></div>
+      <div class="star" style="top:50%;left:40%;width:6px;height:6px;background:#fff;animation-delay:0.8s;"></div>
+      <div class="star" style="top:80%;left:20%;width:9px;height:9px;background:#ffd700;animation-delay:1.5s;"></div>
+      <div class="star" style="top:20%;left:80%;width:6px;height:6px;background:#fffbe6;animation-delay:0.3s;"></div>
+      <div class="star" style="top:60%;left:10%;width:8px;height:8px;background:#fff;animation-delay:1.8s;"></div>
+      <div class="star" style="top:15%;left:50%;width:12px;height:12px;background:#ffd700;animation-delay:1.1s;"></div>
+      <div class="star" style="top:40%;left:75%;width:7px;height:7px;background:#b3e5fc;animation-delay:0.7s;"></div>
+      <div class="star" style="top:85%;left:55%;width:10px;height:10px;background:#fff;animation-delay:1.9s;"></div>
+    </div>
     <div
-      class="relative flex size-full min-h-screen flex-col bg-white justify-between group/design-root overflow-x-hidden"
+      class="main-content relative flex size-full min-h-screen flex-col justify-between group/design-root overflow-x-hidden"
       style='font-family: "Spline Sans", "Noto Sans", sans-serif;'
     >
       <!-- Main View -->
       <div id="mainView">
-        <div class="flex items-center bg-white p-4 pb-2 justify-between">
-          <h2 class="text-[#181811] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Randomator 3000</h2>
+        <div class="flex items-center bg-transparent p-4 pb-2 justify-between">
+          <h2 class="text-[#181811] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center" style="color:#ffd700; font-family:'Cinzel',serif;">Randomator 3000</h2>
+          <div class="hp-subtitle">¡La Nimbus de las decisiones!</div>
           <div class="flex w-12 items-center justify-end">
             <!-- Empty div to maintain layout -->
             <div class="w-12"></div>
           </div>
         </div>
-        <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3 justify-center mx-auto">
+        <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3 justify-center mx-auto" style="background:transparent;">
           <label class="flex flex-col min-w-40 flex-1 items-center w-full">
             <input
               id="newOption"
@@ -145,36 +311,30 @@
             />
           </label>
         </div>
-        <div class="flex px-4 py-3 justify-center gap-2">
-          <button
-            id="addOptionBtn"
-            class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-4 bg-[#f5f5f0] text-[#181811] text-sm font-bold leading-normal tracking-[0.015em]"
-          >
-            <span class="truncate">Agregar Opci&oacute;n</span>
-          </button>
+        <div class="flex px-4 py-3 justify-center gap-2" style="background:transparent;">
           <button
             id="clearOptionsBtn"
-            class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-4 bg-red-100 text-red-600 text-sm font-bold leading-normal tracking-[0.015em]"
+            class="hp-btn flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-4 text-sm font-bold leading-normal tracking-[0.015em]"
           >
             <span class="truncate">Borrar Todo</span>
           </button>
         </div>
-        <h2 class="text-[#181811] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Opciones</h2>
-        <div id="optionsList" class="flex flex-col">
+        <h2 class="text-[#ffd700] text-2xl font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5" style="font-family:'Cinzel',serif; letter-spacing:2px; background:transparent;">Opciones</h2>
+        <div id="optionsList" class="flex flex-col" style="background:transparent; min-height: 120px;">
           <!-- Options will be added here dynamically -->
         </div>
       </div>
 
       <!-- Result View (Hidden by default) -->
       <div id="resultView" class="hidden">
-        <div class="flex items-center bg-white p-4 pb-2 justify-between">
-          <h2 class="text-[#181811] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Randomator 3000</h2>
+        <div class="flex items-center bg-transparent p-4 pb-2 justify-between">
+          <h2 class="text-[#ffd700] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center" style="font-family:'Cinzel',serif;">Randomator 3000</h2>
           <div class="flex w-12 items-center justify-end">
             <button
               id="backBtn"
-              class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 bg-transparent text-[#181811] gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0"
+              class="hp-back-btn flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden h-12 gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0"
             >
-              <div class="text-[#181811]" data-icon="Arrow" data-size="24px" data-weight="regular">
+              <div class="text-[#ffd700]" data-icon="Arrow" data-size="24px" data-weight="regular">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M19 12H5M12 19l-7-7 7-7"/>
                 </svg>
@@ -182,23 +342,28 @@
             </button>
           </div>
         </div>
-        <div class="flex flex-col items-center justify-center flex-1">
-          <h2 class="text-[#181811] text-[32px] font-bold leading-tight tracking-[-0.015em] mb-8">El ganador es:</h2>
-          <p id="winnerText" class="text-[#181811] text-[48px] font-bold leading-tight tracking-[-0.015em] text-center"></p>
+        <h2 class="text-white tracking-light text-[28px] font-bold leading-tight px-4 text-center pb-3 pt-5" style="font-family:'Cinzel',serif;">El ganador es...</h2>
+        <div class="p-4">
+          <div class="hp-result-bg">
+            <div class="flex w-full items-end justify-center gap-4 p-4">
+              <div class="flex max-w-[440px] flex-1 flex-col gap-1">
+                <p id="winnerText" class="hp-winner-title">Opción ganadora</p>
+                <p class="hp-winner-desc">Esta opción fue seleccionada mágicamente de tu lista.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div>
-        <div class="flex px-4 py-3 justify-center mt-6 mb-6">
-          <button
-            id="randomizeBtn"
-            class="flex min-w-[200px] max-w-[600px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-16 px-8 py-[6px] flex-1 bg-[#f8f406] text-[#181811] text-xl font-bold leading-normal tracking-[0.015em] shadow-sm border-2 border-[#f8f406]"
-          >
-            <span class="truncate">Seleccionar Opci&oacute;n Aleatoria</span>
-          </button>
-        </div>
-        <div class="h-5 bg-white"></div>
+      <div class="flex px-4 py-3 justify-center mt-6 mb-6" style="background:transparent;">
+        <button
+          id="randomizeBtn"
+          class="hp-btn flex min-w-[200px] max-w-[600px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-16 px-8 py-[6px] flex-1 text-xl font-bold leading-normal tracking-[0.015em] shadow-sm border-2"
+        >
+          <span class="truncate">Seleccionar Opci&oacute;n</span>
+        </button>
       </div>
+      <div class="h-5" style="background:transparent;"></div>
     </div>
     <script src="app.js"></script>
   </body>
