--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
           <label class="flex flex-col min-w-40 flex-1 items-center w-full">
             <input
               id="newOption"
+              type="search"
               placeholder="Ingresa una nueva opci&oacute;n"
               class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#181811] focus:outline-0 focus:ring-0 border border-[#e6e6db] bg-white focus:border-[#e6e6db] h-14 placeholder:text-[#8c8b5f] p-[15px] text-base font-normal leading-normal max-w-md mx-auto"
               value=""
